Cleanup of the text.

--- a/Thesis-proposal.tex
+++ b/Thesis-proposal.tex
@@ -95,7 +95,7 @@
 \maketitle
 
 \chapter{Motivation}
-Radio position determination of flying objects is a key radiolocation discipline which allows safe operation of aircraft and spaceships. The radar systems developed in last decades have enough properties to solve standard situations \cite{Radar_basics}. However, some safety problems related to unusual conditions are not resolved yet \cite{lightning_dose1}. These situations could be caused by extremal weather events like thunderstorms for example, where lightning can damage an airplane or limit a radio communication and navigation capabilities in affected area \cite{lightning_dose2}. Additionally, according to recent scientific discoveries, lightning discharges can produce an ionizing radiation which could significantly enhance an effective dose of aircraft crew and passengers \cite{lightning_dose3}, \cite{lightning_dose4}, \cite{lightning_dose6}. 
+Radio position determination of flying objects is a key radiolocation discipline which allows safe operation of aircraft and spaceships. The radar systems developed in last decades have sufficient properties to solve standard situations \cite{Radar_basics}. However, some safety problems related to unusual conditions are not resolved yet \cite{lightning_dose1}. These situations could be caused by extremal weather events like thunderstorms for example, where lightning can damage an airplane or limit a radio communication and navigation capabilities in affected area \cite{lightning_dose2}. Additionally, according to recent scientific discoveries, lightning discharges can produce an ionizing radiation which could significantly enhance an effective dose of aircraft crew and passengers \cite{lightning_dose3}, \cite{lightning_dose4}, \cite{lightning_dose6}. 
 Therefore a research which helps quantify, predict and avoid these hazards should improve overall air traffic safety \cite{lightning_dose5}. This goal should be achieved by improving understanding of unusual atmospheric events and enhance sensing capabilities in extreme circumstances. 
 Unfortunately, hazardous conditions can have multiple different forms with different suitable detection methods which should often be combined to produce a desirable result, but at least for some cases, a radar sensing system should be a suitable option. 
 The parameters of that detection system should be universal as possible and assume possible combination with other detection methods. 
@@ -126,8 +126,8 @@ Besides the backscatter scientific radar systems, a multistatic forward scatter 
 The general principle of meteor observing by the forward scattering of radio waves off their trails is illustrated by the figure \ref{fig:forward_scattering}. A radio receiver with operating frequency range of 30-200MHz is located at a proper distance (about 500-2000 km) from a transmitter. A curvature of the Earth or terrain features over this distance ensures there is no possibility of direct radio visibility. When a meteoroid enters the atmosphere, its meteor trail may reflect the radio waves emitted by the transmitter to the receiver. The signal can be received until the ionized meteor trail recombines. Reflections can last from tenths of a second to a few minutes, depending on the used radio frequency and ionization density. The received signal characteristics are directly related to physical parameters of the meteoric event \cite{forward_scatter}.
 
 These forward scattering multistatic systems have a great advantage of a significant detection coverage. 
-The main improvement of coverage, which the forward scattering method brings, originate in the fact that one or multiple radio-frequency transmitters can be cooperatively handled simultaneously over the large area. Additionally, forward scattering geometry decreases the angle of reflection, therefore increased frequency of the transmitter can be used. Unfortunately, the current spread of this technology is not sufficient to entirely cover the meteor flux in the Earth's atmosphere.
-However, the benefits of using this radio method are obvious - radio meteor detection capability is not dependent on the current weather and can work even during the daylight or nights with full Moon \cite{daylight_shover}.
+The main improvement of coverage, which the forward scattering method brings, originate in the fact that one or multiple radio-frequency transmitters can be cooperatively handled simultaneously over the large area. Additionally, forward scattering geometry decreases the angle of reflection. Therefore the increased frequency of the transmitter can be used. Unfortunately, the current spread of this technology is not sufficient to entirely cover the meteor flux in the Earth's atmosphere.
+However, the benefits of using this radio method over optical observations are evident - radio meteor detection capability is not dependent on the current weather and can work even during the daylight or nights with full Moon \cite{daylight_shover}.
 
 \begin{figure}
  \begin{center}
@@ -376,7 +376,7 @@ The analysis mentioned above of state of the art methods and systems leads to a 
 Already obtained experiences can be used for detection other natural phenomena like lightning strikes which could be extremely useful for work at the recently established CRREAT project which needs precise localization of atmospheric events to achieve its scientific goals. A publishable result could be expected according to CRREAT project roadmap because measurement of lightning position and its parameters are needed for describing the dependence on some other phenomena.  The CRREAT team will perform measurements of the atmospheric radiation and ionization events on satellites, aircraft, unmanned aerial vehicles, monitoring cars and ground stations. The CRREAT project will contribute to improvement of space weather models, air transport safety and global navigation systems reliability.
 
 \section{Proposed lightning detection system}
-The source \cite{LOFAR_lightning} suggests that the lightning pulses are strongly polarized where the polarization direction varies strongly for the individual peaks that form the total pulse. Combining the intensity and polarization information from many different antennas at different viewing angles on the discharge, the time structure, and direction of each charge movement can be determined.  This forms the input for building a 4-D vector map of the discharge current showing for every step the position in space as well as the direction of the electric current and therefore giving detailed insight into the spatiotemporal development of the lightning.  The shape of each pulse is related to the time-dependence and the distance over which the current flows.
+The source \cite{LOFAR_lightning} suggests that the lightning pulses are strongly polarized where the polarization direction varies strongly for the individual peaks that form the total pulse. Combining the intensity and polarization information from many different antennas at different viewing angles on the discharge, the time structure, and direction of each charge movement can be determined.  This measurement forms the input for building a 4-D vector map of the discharge current showing for every step the position in space as well as the direction of the electric current and therefore giving detailed insight into the spatiotemporal development of the lightning.  The shape of each pulse is related to the time-dependence and the distance over which the current flows.
 This hypothesis verification is a primary challenge for future work because currently used TOA methods mentioned above allows computation of cloud of points only, but lightning should be described by vectors instead. There is a point where already done work on meteor detection should be used for lightning elementary vectors computation and significantly improve the state of the art lightning location techniques in following points: 
 
 \begin{itemize}
@@ -387,7 +387,7 @@ This hypothesis verification is a primary challenge for future work because curr
 \end{itemize}
 
 These points should be fulfilled iteratively by the combination of experimental and theoretical work.  Firstly a test data should be captured by at least three multichannel SDR stations distributed symmetrically as possible around a thunderstorm. The captured data should be used to determine signal characteristics usable to improve the data processing techniques beyond a TOA point localization method e.g. slightly different pulse spectrum received at each station could be expected. 
-Then the selected signal properties should be numerically modeled to verify a proper understanding of physical processes in the lightning signal generation. After that, a receiver network experiment configuration could be optimized to detect and process lightning signal more efficiently. 
+Then the selected signal properties should be numerically modeled to verify a proper understanding of physical processes in the lightning signal generation. After that, a receiver network experiment configuration could be optimized to detect and handle lightning signal more efficiently. 
 
 The resulting data sets should be used for investigation of lightning and ionizing radiation relations which help to improve air traffic safety. 
 
