--- a/Thesis-proposal.tex
+++ b/Thesis-proposal.tex
@@ -274,7 +274,7 @@ For feasibility study of meteor detection based on VOR beacons, a numerical sign
 
 \begin{figure}
 \includegraphics[width=\textwidth]{./img/VOR_signal.png}
-\caption{VOR signal numerical model}
+\caption{The frequency spectrum of VOR signal numerical model. Vertical axis is a frequency bin number.}
 \label{VOR_signal}
 \end{figure}
 
@@ -328,7 +328,7 @@ Another antenna type was proposed \cite{Bolidozor_QHA} to overcome the issues of
 \begin{figure*}
  \begin{center}
  \includegraphics[width=\textwidth]{./img/SC_QHA_prototype.jpg}
- \caption{A prototype of SC-QHA antenna which was build.}
+ \caption{A prototype of SC-QHA antenna which was build. The edge lenght of each base tile is one meter.  }
   \label{fig:QHA_antenna} 
  \end{center}
 \end{figure*}
